--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,9 +1,22 @@
-body {
-    font-family: "Lato", sans-serif;
-    margin: 0;
+* {
+    margin: 0px;
+    padding: 0px;
+    box-sizing: border-box;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 300;
 }
 
-/* navbar w/blk background  */
+/*makes header texts uppercase*/
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    text-transform: uppercase;
+}
+
+/* navbar w/dark background  */
 .navbar {
     background-color: #333;
     overflow: hidden;
@@ -16,28 +29,28 @@ body {
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
-    font-size: 17px;
+    font-size: 13px;
 }
 
 /* sets navbar hover */
 .navbar a:hover {
-    background-color: #b0c1b4;
+    background-color: #c0d1c4;
     color: black;
 }
 
 /* splits sections to top right on navbar */
 .sections a {
     float: right;
-        color: #f2f2f2;
-        text-align: center;
-        padding: 14px 16px;
-        text-decoration: none;
-        font-size: 17px;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 13px;
 }
 
 /* hover for sections*/
 .sections a:hover {
-    background-color: #b0c1b4;
+    background-color: #c0d1c4;
     color: black;
 }
 
@@ -51,9 +64,64 @@ body {
     float: left;
     margin-right: 30px;
 }
-
+/* about me title and paragraph on right side of page*/
 .about-me {
     float: right;
-    padding: 10px;
+    padding: 10px 0px;
     margin: 5px;
+}
+
+.about-me p {
+    margin: 20px 180px;
+}
+/* container for grid w/cards*/
+.container {
+    width: 85%;
+    margin: 0px auto;
+    float: left;
+    padding: 10px;
+}
+
+/* creates grid style in container */
+.grid {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 25px;
+    margin: 0 -2px;
+}
+
+/*hover for cards in grid*/
+.grid a:hover {
+    background-color: #c0d1c4;
+    color: black;
+}
+
+/* Style the counter cards */
+.card {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    /* this adds the "card" effect */
+    padding: 10px;
+    text-align: center;
+    background-color: #989e98e8;
+}
+/*style h3 in cards*/
+.card h3 {
+    text-align: center;
+    color: #f2f2f2;
+
+}
+/*styling image in cards*/
+.card img {
+    width: 90%;
+    height: auto;
+    margin-bottom: 10px;
+}
+
+/* Responsive columns - one column layout (vertical) on small screens*/
+@media screen and (max-width: 600px) {
+    .grid {
+        width: 100%;
+        display: block;
+        margin-bottom: 20px;
+    }
 }
